--- a/src/main/resources/Fxml/Student/Dashboard.fxml
+++ b/src/main/resources/Fxml/Student/Dashboard.fxml
@@ -66,12 +66,13 @@
    </VBox>
    <Text layoutX="25.0" layoutY="311.0" strokeType="OUTSIDE" strokeWidth="0.0" styleClass="section_title" text="Actividades" AnchorPane.leftAnchor="25.0" AnchorPane.topAnchor="300.0" />
    <Label fx:id="loginDate" layoutX="811.0" layoutY="24.0" styleClass="date_lbl" text="Hoy, 4-11-2024" AnchorPane.rightAnchor="25.0" AnchorPane.topAnchor="25.0" />
-   <TableView layoutX="25.0" layoutY="317.0" prefHeight="200.0" prefWidth="200.0" AnchorPane.bottomAnchor="0.0" AnchorPane.leftAnchor="25.0" AnchorPane.rightAnchor="25.0" AnchorPane.topAnchor="320.0">
+   <TableView fx:id="actividadesTable" layoutX="25.0" layoutY="317.0" prefHeight="200.0" prefWidth="200.0" AnchorPane.bottomAnchor="0.0" AnchorPane.leftAnchor="25.0" AnchorPane.rightAnchor="25.0" AnchorPane.topAnchor="320.0">
      <columns>
        <TableColumn fx:id="colAsignatura" prefWidth="192.0" text="Asginatura" />
        <TableColumn fx:id="colActividad" prefWidth="400.0" text="Actividad" />
          <TableColumn fx:id="colFecha" prefWidth="116.0" text="Fecha" />
          <TableColumn fx:id="colNota" prefWidth="109.0" text="Nota" />
+         <TableColumn fx:id="colCriterio" prefWidth="109.0" text="Criterio" />
      </columns>
    </TableView>
 </AnchorPane>
