--- a/src/main/resources/Fxml/Admin/Admin.fxml
+++ b/src/main/resources/Fxml/Admin/Admin.fxml
@@ -9,7 +9,9 @@
 </left>
 
 <center>
-    <fx:include source = "AdminUserView.fxml"/>
-</center>
+      <BorderPane fx:id="adminParent" prefHeight="720.0" prefWidth="1080.0">
+           
+        </BorderPane>
+   </center>
 
 </BorderPane>
