--- a/src/main/resources/Fxml/Admin/AdminUserView.fxml
+++ b/src/main/resources/Fxml/Admin/AdminUserView.fxml
@@ -53,7 +53,7 @@
    <Label layoutX="764.0" layoutY="484.0" text="Curso:" />
    <ComboBox layoutX="821.0" layoutY="480.0" prefWidth="150.0" promptText="Seleccionar" />
     <AnchorPane fx:id="visualizacionPane" layoutX="14.0" layoutY="14.0" prefHeight="351.0" prefWidth="1080.0" styleClass="pane" stylesheets="@../../Styles/AdminMainView.css" AnchorPane.bottomAnchor="350.0" AnchorPane.leftAnchor="0.0" AnchorPane.rightAnchor="0.0" AnchorPane.topAnchor="0.0">
-        <TableView layoutX="14.0" layoutY="45.0" prefHeight="200.0" prefWidth="200.0" AnchorPane.bottomAnchor="0.0" AnchorPane.leftAnchor="0.0" AnchorPane.rightAnchor="0.0" AnchorPane.topAnchor="40.0">
+        <TableView fx:id="TablePerson" layoutX="14.0" layoutY="45.0" prefHeight="200.0" prefWidth="200.0" AnchorPane.bottomAnchor="0.0" AnchorPane.leftAnchor="0.0" AnchorPane.rightAnchor="0.0" AnchorPane.topAnchor="40.0">
             <columns>
                 <TableColumn fx:id="columIdentificacion" prefWidth="78.0" text="Identificacion" />
                 <TableColumn fx:id="colTipoId" prefWidth="34.0" text="Tipo" />
